--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -18,10 +18,5 @@
     <th>Body</th>
   </tr>
 
-  <% @test.questions.each do | question | %>
-    <tr>
-      <td><%= question.id %></td>
-      <td><%= question.body %></td>
-    </tr>
-    <%end%>
+  <% render @tests %>
 </table>
