--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,4 +1,12 @@
 <tr>
-  <td><%= question.id %></td>
-  <td><%= question.body %></td>
+  <td><%= test.title %></td>
+  <td><%= test.level %></td>
+  <td><%= link_to 'Show', test_path(test) %></td>
+  <td><%= link_to 'Edit', edit_test_path(test) %></td>
+  <td>
+    <%= link_to 'Delete',
+                test_path(test),
+                method: :delete,
+                data: { confirm: 'Вы уверены?' } %>
+  </td>
 </tr>
