--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,15 +1,19 @@
 <h1>Tricky questions</h1>
 
+<p>
+  <%= link_to 'New question for current test', new_test_question_path %>
+</p>
+
 <table>
   <tr>
     <th>id</th>
     <th>Body</th>
+    <th colspan="3">Actions</th>
   </tr>
 
-  <% @questions.each do | question | %>
-    <tr>
-      <td><%= question.id %></td>
-      <td><%= question.body %></td>
-    </tr>
-    <%end%>
+  <%= render @questions %>
 </table>
+
+<p>
+  <%= link_to 'Back', test_path(@test) %>
+</p>
