--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,12 +1,7 @@
-<h1>Create New Question</h1>
+<h1>Create New Question for test <%= @test.title %></h1>
 
-<form action="/tests/1/questions" method="post">
-  <input name="authenticity_token" value"<%= form_authenticity_token %>" type="hidden">
+<%= render 'form' %>
 
-  <p>
-    <label for="question-body">Body:</label>
-    <input type="text" name="question[body]" id="question-body">
-  </p><br>
-
-  <input type="submit" value="Create">
-</form>
+<p>
+  <%= link_to 'Back', test_path(@test) %>
+</p>
