--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -12,16 +12,29 @@
 
 <h2>Questions from this test:</h2>
 
+<p>
+  <%= link_to 'New question for this test', new_test_question_path(@test) %>
+</p>
+
 <table>
   <tr>
     <th>Id</th>
     <th>Body</th>
+    <th colspan="3">Actions</th>
   </tr>
 
   <% @test.questions.each do |question| %>
     <tr>
       <td><%= question.id %></td>
       <td><%= question.body %></td>
+      <td><%= link_to 'Show', question_path(question) %></td>
+      <td><%= link_to 'Edit', edit_question_path(question) %></td>
+      <td>
+        <%= link_to 'Delete',
+                    question_path(question),
+                    method: :delete,
+                    data: { confirm: 'Вы уверены?' } %>
+      </td>
     </tr>
   <% end %>
 </table><br>
