--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,13 @@
 
   <body>
     <%= yield %>
+    <footer>
+      <br>
+      <p>
+      <%= Time.current.year %>, Basystyy Andrew, the illusion of becoming a programmer)))<br>
+      <%= link_to 'TestGuru project', 'https://github.com/Basystyy/testguru.git' %><br>
+      <%= link_to 'project in an online school Thinknetica', 'http://thinknetica.com' %> <br>
+      </p>
+    </footer>
   </body>
 </html>
