--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -9,4 +9,5 @@
                 method: :delete,
                 data: { confirm: 'Вы уверены?' } %>
   </td>
+  <td><%= test.questions.count %></td>
 </tr>
