--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -9,6 +9,7 @@
     <th>Title</th>
     <th>Level</th>
     <th colspan="3">Actions</th>
+    <th>Qnt questions</th>>
   </tr>
 
   <%= render @tests %>
