Added files of helpers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <footer>
       <br>
       <p>
-      <%= Time.current.year %>, Basystyy Andrew, the illusion of becoming a programmer)))<br>
-      <%= link_to 'TestGuru project', 'https://github.com/Basystyy/testguru.git' %><br>
+      <%= current_year %>, Basystyy Andrew, the illusion of becoming a programmer)))<br>
+      <%= link_to 'TestGuru project', git_repo %><br>
       <%= link_to 'project in an online school Thinknetica', 'http://thinknetica.com' %> <br>
       </p>
     </footer>
