--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit question <%= @question.body %> from test <%= @question.test.title %> </h1>
+<h1><%= question_header(@test) %> </h1>
 
 <%= render 'form'%>
 
