--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,12 +1,1 @@
-<tr>
-  <td><%= question.id %></td>
-  <td><%= question.body %></td>
-  <td><%= link_to 'Show', question_path(question) %></td>
-  <td><%= link_to 'Edit', edit_question_path(question) %></td>
-  <td>
-    <%= link_to 'Delete',
-                question_path(question),
-                method: :delete,
-                data: { confirm: 'Вы уверены?' } %>
-  </td>
-</tr>
+<%= render partial: 'shared/actions', locals: {question: question} %>
