--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,9 @@
 <h1><%= question_header(@test) %></h1>
 
-<%= render 'form' %>
+<%= form_with model: [@test, @question], local: true do |form| %>
+  <%= render partial: 'form', locals: {form: form}%>
+<% end %>
+
 
 <p>
   <%= link_to 'Back', test_path(@test) %>
