--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -24,18 +24,7 @@
   </tr>
 
   <% @test.questions.each do |question| %>
-    <tr>
-      <td><%= question.id %></td>
-      <td><%= question.body %></td>
-      <td><%= link_to 'Show', question_path(question) %></td>
-      <td><%= link_to 'Edit', edit_question_path(question) %></td>
-      <td>
-        <%= link_to 'Delete',
-                    question_path(question),
-                    method: :delete,
-                    data: { confirm: 'Вы уверены?' } %>
-      </td>
-    </tr>
+    <%= render partial: 'shared/actions', locals: {question: question, test: @test} %>
   <% end %>
 </table><br>
 
