--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Answer</h1>
+<h1><%= answer_header(@question) %></h1>
 
-<%= render 'form', answer: @answer %>
+<%= form_with model: [@question, @answer], local: true do |form| %>
+  <%= render partial: 'form', locals: {form: form}%>
+<% end %>
 
-<%= link_to 'Back', answers_path %>
+
+<p>
+  <%= link_to 'Back', question_path(@question) %>
+</p>
