--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,4 +1,9 @@
-<p id="notice"><%= notice %></p>
+<h1>Answer <%= params[:id] %> from question "<%= @answer.question.body %>"</h1>
 
-<%= link_to 'Edit', edit_answer_path(@answer) %> |
-<%= link_to 'Back', answers_path %>
+<p>
+  <strong>Body:</strong>
+  <%= @answer.body %>
+<p/>
+
+<%= link_to 'Edit', edit_answer_path(@answer) %>
+<%= link_to 'Back', question_path %>
