--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -12,16 +12,27 @@
 
 <h2>Answers for this question:</h2>
 
+<p>
+  <%= link_to 'New answer for this question', new_question_answer_path(@question) %>
+</p>
+
 <table>
   <tr>
     <th>Id</th>
     <th>Body</th>
+    <th colspan="3"></th>
   </tr>
 
   <% @question.answers.each do | answer | %>
     <tr>
       <td><%= answer.id %></td>
       <td><%= answer.body %></td>
+      <td><%= link_to 'Show', answer %></td>
+      <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
+      <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'Edit', edit_question_path(@question) %>
+<%= link_to 'Back', test_path %>
