--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -35,4 +35,4 @@
 </table>
 
 <%= link_to 'Edit', edit_question_path(@question) %>
-<%= link_to 'Back', test_path %>
+<%= link_to 'Back', test_path(@question.test)%>
