--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -9,5 +9,6 @@
                 method: :delete,
                 data: { confirm: 'Вы уверены?' } %>
   </td>
+  <td><%= button_to 'Start', start_test_path(test) %></td>
   <td><%= test.questions.count %></td>
 </tr>
