Evaluation of test results has been implemented

--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,1 +1,2 @@
-<h1> <%= @test_passage.test.title %> Test was Completed!</h1>
+<h1><%= @test_passage.test.title %></h1>
+<h1><%= test_passage_header(@test_passage) %></h1>
