--- a/app/views/shared/_actions.html.erb
+++ b/app/views/shared/_actions.html.erb
@@ -4,9 +4,6 @@
   <td><%= link_to 'Show', question_path(question) %></td>
   <td><%= link_to 'Edit', edit_question_path(question) %></td>
   <td>
-    <%= link_to 'Delete',
-                new_test_question_path(question),
-                method: :delete,
-                data: { confirm: 'Вы уверены?' } %>
+    <%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' }%>
   </td>
 </tr>
