--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Pass the <%= @test_passage.test.title %> Test</h1>
 
 <b>
+  Question number <%= @number_question %> from <%= @test_passage.test.questions.count %>
   <%= @test_passage.current_question.body %>
 </b>
 
