--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,8 +1,8 @@
 <h1>Pass the <%= @test_passage.test.title %> Test</h1>
 
 <b>
-  Question number <%= @number_question %> from <%= @test_passage.test.questions.count %>
-  <%= @test_passage.current_question.body %>
+  <p>Question number <%= current_number %> from <%= questions_coumt %></p>
+  <p><%= @test_passage.current_question.body %></p>
 </b>
 
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
@@ -15,3 +15,7 @@
 
   <p><%= form.submit 'Next' %></p>
 <% end %>
+
+<p>
+  <%= link_to 'Back to list of tests', tests_path %>
+</p>
