--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
   <body>
 
     <% if logged_in? %>
-      <p class = "nav user">Welcome, <b><%= current_user.email %></b> Guru</p>
+      <p class = "nav user">
+        Welcome, <b><%= current_user.email %></b> Guru<br>
+        <%= link_to 'Logout', logout_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </p>
     <% end %>
 
     <%= yield %>
