Correct views flash methods

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Tricky tests</h1>
 
+<%= link_to 'Register a new user', signup_path %><br>
+
+<%= link_to 'Login existing user', login_path %><br>
+
 <p>
   <%= link_to 'New test', new_test_path %>
 </p>
