--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,15 +23,19 @@
     <th colspan="3"></th>
   </tr>
 
+
   <% @question.answers.each do | answer | %>
     <tr>
       <td><%= answer.id %></td>
       <td><%= answer.body %></td>
-      <td><%= link_to 'Show', answer %></td>
-      <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
-      <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% if logged_in? %>
+        <td><%= link_to 'Show', answer %></td>
+        <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
+        <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
     </tr>
   <% end %>
+
 </table>
 
 <%= link_to 'Edit', edit_question_path(@question) %>
