--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,10 +1,10 @@
 <tr>
   <td><%= test.title %></td>
   <td><%= test.level %></td>
-  <td><%= link_to 'Show', test_path(test) %></td>
-  <td><%= link_to 'Edit', edit_test_path(test) %></td>
+  <td><%= link_to 'Show', test_path(test)%></td>
+  <td><%= link_to 'Edit', edit_test_path(test)  if logged_in?%></td>
   <td>
-    <%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' }%>
+    <%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %>
   </td>
   <td><%= button_to 'Start', start_test_path(test) %></td>
   <td><%= test.questions.count %></td>
