Added: navigation, action availability, use of user model, saving path to navigate after authentication

--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -5,5 +5,11 @@
 }
 
 .flash.alert {
+  color: #ef2727;
   border-color: #ef2727;
+}
+
+.flash.notice {
+  color: #3827ef;
+  border-color: #3827ef;
 }
