--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <%= render 'shared/header' %>
+
+    <h2>
+      <%= alert_message %>
+      <%= notice_message %>
+    </h2>
 
     <% if logged_in? %>
       <p class = "nav user">
