--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <br>
   <h2>   
-    <%= link_to 'Project TestGuru, Rails skills training', tests_path %> <br>
+    <%= link_to 'Project TestGuru, Rails skills training', root_path %> <br>
   </h2>
 </header>
