--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Tricky tests</h1>
 
-<%= link_to 'Register a new user', signup_path %><br>
+<%= link_to 'Register a new user', new_user_registration_path %><br>
 
-<%= link_to 'Login existing user', login_path %><br>
+<%= link_to 'Login existing user', new_user_session_path %><br>
 
 <p>
   <%= link_to 'New test', new_test_path %>
