--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -4,12 +4,16 @@
 
 <%= link_to 'Login existing user', new_user_session_path %><br>
 
+<p>
+  <%= link_to 'New test', new_admin_test_path %>
+</p>
+
 <table>
   <tr>
     <th>Title</th>
     <th>Level</th>
+    <th colspan="3">Actions</th>
     <th>Qnt questions</th>
-    <th>Actions</th>
   </tr>
 
   <%= render @tests %>
