--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -28,5 +28,5 @@
   <% end %>
 </table><br>
 
-<%= link_to 'Edit', edit_test_path(@test) %> | 
-<%= link_to 'Back', tests_path %>
+<%= link_to 'Edit', edit_admin_test_path(@test) %> | 
+<%= link_to 'Back', admin_tests_path %>
