--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Tricky questions</h1>
 
 <p>
-  <%= link_to 'New question for current test', new_test_question_path%>
+  <%= link_to 'New question for current test', new_admin_test_question_path%>
 </p>
 
 <table>
@@ -15,5 +15,5 @@
 </table>
 
 <p>
-  <%= link_to 'Back', test_path(@test) %>
+  <%= link_to 'Back', admin_test_path(@test) %>
 </p>
