--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -13,7 +13,7 @@
 <h2>Answers for this question:</h2>
 
 <p>
-  <%= link_to 'New answer for this question', new_question_answer_path(@question) %>
+  <%= link_to 'New answer for this question', new_admin_question_answer_path(@question) %>
 </p>
 
 <table>
@@ -28,15 +28,13 @@
     <tr>
       <td><%= answer.id %></td>
       <td><%= answer.body %></td>
-      <% if logged_in? %>
-        <td><%= link_to 'Show', answer %></td>
-        <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
-        <td><%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+      <td><%= link_to 'Show', admin_answer_path %></td>
+      <td><%= link_to 'Edit', edit_admin_answer_path(answer) %></td>
+      <td><%= link_to 'Destroy', admin_answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 
 </table>
 
-<%= link_to 'Edit', edit_question_path(@question) %>
-<%= link_to 'Back', test_path(@question.test)%>
+<%= link_to 'Edit', edit_admin_question_path(@question) %>
+<%= link_to 'Back', admin_test_path(@question.test)%>
