The current admin is assigned as the author of the test when it is created

--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -17,6 +17,8 @@
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p>
 
+  <% author_id = current_user.id %>
+
   <p>
     <%= form.submit %>
   </p>
