Added localization for models and mailers

--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,4 +1,4 @@
-<h1> Result for test: <%= @test_passage.test.title %></h1>
+<h1> <%= t('.header', title: @test_passage.test.title) %></h1>
 <h1><%= test_passage_header %></h1>
 
 <p>
