--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Pass the <%= @test_passage.test.title %> Test</h1>
 
 <b>
-  <p>Question number <%= current_number %> from <%= questions_coumt %></p>
+  <p>Question number <%= current_number %> from <%= questions_count %></p>
   <p><%= @test_passage.current_question.body %></p>
 </b>
 
