--- a/app/views/tests_mailer/completed_test.text.erb
+++ b/app/views/tests_mailer/completed_test.text.erb
@@ -1,4 +1,5 @@
 YePP!
 ===========
 
-Congratulations! You completed the "<%= @test.title %>" test. Choose your next test: <%= tests_url %>
+<%= header_text %>
+Choose your next test: <%= tests_url %>
