Lokalized tests and admin-tests

--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,26 +1,26 @@
-<h1>Test <%= params[:id] %> </h1>
+<h1><%= t('.test') %> <%= params[:id] %> </h1>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= t('.title') %></strong>
   <%= @test.title %>
 <p/>
 
 <p>
-  <strong>Level:</strong>
+  <strong><%= t('.level') %></strong>
   <%= @test.level %>
 <p/>
 
-<h2>Questions from this test:</h2>
+<h2><%= t('.test_questions') %></h2>
 
 <p>
-  <%= link_to 'New question for this test', new_admin_question_path(@test) %>
+  <%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
 </p>
 
 <table>
   <tr>
-    <th>Id</th>
-    <th>Body</th>
-    <th colspan="3">Actions</th>
+    <th><%= t('.id') %></th>
+    <th><%= t('.body') %></th>
+    <th colspan="3"><%= t('.actions') %></th>
   </tr>
 
   <% @test.questions.each do |question| %>
@@ -28,5 +28,5 @@
   <% end %>
 </table><br>
 
-<%= link_to 'Edit', edit_admin_test_path(@test) %> | 
-<%= link_to 'Back', admin_tests_path %>
+<%= link_to t('form.edit'), edit_admin_test_path(@test) %> | 
+<%= link_to t('form.back'), admin_tests_path %>
