--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -8,7 +8,7 @@
   <tr>
     <th>id</th>
     <th>Body</th>
-    <th colspan="3">Actions</th>
+    <th colspan="3"><%= t('.actions') %>></th>
   </tr>
 
   <%= render @questions %>
