--- a/app/views/admin/shared/_actions.html.erb
+++ b/app/views/admin/shared/_actions.html.erb
@@ -1,9 +1,9 @@
 <tr>
   <td><%= question.id %></td>
   <td><%= question.body %></td>
-  <td><%= link_to 'Show', admin_question_path(question) %></td>
-  <td><%= link_to 'Edit', edit_admin_question_path(question) %></td>
+  <td><%= link_to t('form.show'), admin_question_path(question) %></td>
+  <td><%= link_to t('form.edit'), edit_admin_question_path(question) %></td>
   <td>
-    <%= link_to 'Destroy', admin_question_path(question), method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to t('form.destroy'), admin_question_path(question), method: :delete, data: { confirm: t('.you_sure') } %>
   </td>
 </tr>
