--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,10 +1,10 @@
 <tr>
   <td><%= test.title %></td>
   <td><%= test.level %></td>
-  <td><%= link_to 'Show', admin_test_path(test)%></td>
-  <td><%= link_to 'Edit', edit_admin_test_path(test)  %></td>
-  <td>
-    <%= link_to 'Destroy', admin_test_path(test), method: :delete, data: { confirm: 'Are you sure?' } %>
-  </td>
   <td><%= test.questions.count %></td>
+  <td><%= link_to t('form.show'), admin_test_path(test)%></td>
+  <td><%= link_to t('form.edit'), edit_admin_test_path(test)  %></td>
+  <td>
+    <%= link_to t('form.destroy'), admin_test_path(test), method: :delete, data: { confirm: t('form.you_sure') } %>
+  </td>
 </tr>
