--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,19 +1,19 @@
 <h1><%= t('.header') %></h1>
 
-<%= link_to 'Register a new user', new_user_registration_path %><br>
+<%= link_to t('.new'), new_user_registration_path %><br>
 
-<%= link_to 'Login existing user', new_user_session_path %><br>
+<%= link_to t('.login'), new_user_session_path %><br>
 
 <p>
-  <%= link_to 'New test', new_admin_test_path %>
+  <%= link_to t('.new_test'), new_admin_test_path %>
 </p>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Level</th>
-    <th colspan="3">Actions</th>
-    <th>Qnt questions</th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.level') %></th>
+    <th><%= t('.question') %></th>
+    <th colspan="3"><%= t('.actions') %></th>
   </tr>
 
   <%= render @tests %>
