--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
 
     <% if user_signed_in? %>
       <p class="nav user">
-        Welcome, <b><%= current_user.email %></b> Guru |
-        <%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= t('header.welcome', email: current_user.email) %><br>
+        <%= link_to t('header.logout'), destroy_user_session_path, method: :delete, data: { confirm: t('form.you_sure') } %>
       </p>
     <% end %>
 
