--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,17 +1,17 @@
 <h1><%= t('.header') %></h1>
 
-<%= link_to 'Register a new user', new_user_registration_path %><br>
+<%= link_to t('.new'), new_user_registration_path %><br>
 
-<%= link_to 'Login existing user', new_user_session_path %><br>
+<%= link_to t('.login'), new_user_session_path %><br>
 
-<%= link_to 'Go to admin resources', admin_tests_path if current_user.is_a?(Admin) %>
+<%= link_to t('.admin'), admin_tests_path if current_user.is_a?(Admin) %>
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Level</th>
-    <th>Qnt questions</th>
-    <th>Actions</th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.level') %></th>
+    <th><%= t('.question') %></th>
+    <th><%= t('.actions') %></th>
   </tr>
 
   <%= render @tests %>
