--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -2,5 +2,5 @@
 <h1><%= test_passage_header %></h1>
 
 <p>
-  <%= link_to 'Back to list of tests', tests_path %>
+  <%= link_to t('form.test_list'), tests_path %>
 </p>
