--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,8 +1,8 @@
 <h1><%= t('.header') %></h1>
 
-<%= link_to t('.new'), new_user_registration_path %><br>
+<%= link_to t('form.new'), new_user_registration_path %><br>
 
-<%= link_to t('.login'), new_user_session_path %><br>
+<%= link_to t('form.login'), new_user_session_path %><br>
 
 <p>
   <%= link_to t('.new_test'), new_admin_test_path %>
