--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
+
     <title>Testguru</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,20 +13,15 @@
   </head>
 
   <body>
-    <%= render 'shared/header' %>
-
     <h2>
       <%= render 'shared/flash' %>
     </h2>
 
-    <% if user_signed_in? %>
-      <p class="nav user">
-        <%= t('header.welcome', email: current_user.email) %><br>
-        <%= link_to t('header.logout'), destroy_user_session_path, method: :delete, data: { confirm: t('form.you_sure') } %>
-      </p>
-    <% end %>
+  <%= render 'shared/nav' %>
 
-    <%= yield %>
-    <%= render 'shared/footer' %>
+    <div class="container">
+      <%= yield %>
+      <%= render 'shared/footer' %>
+    </div>
   </body>
 </html>
