--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,20 +1,24 @@
-<h1><%= t('.header') %></h1>
+<div class="row justify-content-center mt-3">    
+  <div class="col col-md-4">  
+    <h1><%= t('.header') %></h1>
 
-<%= link_to t('form.new'), new_user_registration_path %><br>
+    <%= link_to t('form.new'), new_user_registration_path %><br>
 
-<%= link_to t('form.login'), new_user_session_path %><br>
+    <%= link_to t('form.login'), new_user_session_path %><br>
 
-<p>
-  <%= link_to t('.new_test'), new_admin_test_path %>
-</p>
+    <p>
+      <%= link_to t('.new_test'), new_admin_test_path %>
+    </p>
 
-<table>
-  <tr>
-    <th><%= t('.title') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.question') %></th>
-    <th colspan="3"><%= t('.actions') %></th>
-  </tr>
+    <table class="table table-auto">
+      <tr>
+        <th><%= t('.title') %></th>
+        <th><%= t('.level') %></th>
+        <th><%= t('.question') %></th>
+        <th colspan="3"><%= t('.actions') %></th>
+      </tr>
 
-  <%= render @tests %>
-</table>
+      <%= render @tests %>
+    </table>
+  </div>
+</div>
