--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,12 +1,16 @@
-<h1><%= t('.header') %></h1>
+<div class="row justify-content-center mt-3">    
+  <div class="col col-md-4">
+    <h1><%= t('.header') %></h1>
 
-<table>
-  <tr>
-    <th><%= t('.title') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.question') %></th>
-    <th><%= t('.actions') %></th>
-  </tr>
+    <table class="table table-auto">
+      <tr>
+        <th><%= t('.title') %></th>
+        <th><%= t('.level') %></th>
+        <th><%= t('.question') %></th>
+        <th><%= t('.actions') %></th>
+      </tr>
 
-  <%= render @tests %>
-</table>
+      <%= render @tests %>
+    </table>
+  </div>
+</div>
