Admin navigation styling added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,7 @@
   </head>
 
   <body>
-    <h6>
-      <%= render 'shared/flash' %>
-    </h6>
+    <h6><%= render 'shared/flash' %></h6>
 
     <%= render 'shared/nav' %>
 
