--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,14 +1,18 @@
-<h1>Answer <%= params[:id] %> from question "<%= @answer.question.body %>"</h1>
+<div class="row justify-content-center mt-3">    
+  <div class="col col-md-4">      
+    <h1>Answer <%= params[:id] %> from question "<%= @answer.question.body %>"</h1>
 
-<p>
-  <b>Answer:</b>
-  <%= @answer.body %>
-<p/>
+    <p>
+      <b>Answer:</b>
+      <%= @answer.body %>
+    <p/>
 
-<p>
-  <b>Correct:</b>
-  <%= @answer.correct %>
-</p>
+    <p>
+      <b>Correct:</b>
+      <%= @answer.correct %>
+    </p>
 
-<%= link_to 'Edit', edit_admin_answer_path(@answer)%>
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+    <%= link_to 'Edit', edit_admin_answer_path(@answer)%>
+    <%= link_to 'Back', admin_question_path(@answer.question) %>
+  </div>
+</div>      
