--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,40 +1,44 @@
-<h1>Question <%= params[:id] %> from test <%= @question.test.title %>, level <%= @question.test.level %></h1>
+<div class="row justify-content-center mt-3">    
+  <div class="col col-md-4">    
+    <h1>Question <%= params[:id] %> from test <%= @question.test.title %>, level <%= @question.test.level %></h1>
 
-<p>
-  <strong>Id:</strong>
-  <%= @question.id %>
-<p/>
+    <p>
+      <strong>Id:</strong>
+      <%= @question.id %>
+    <p/>
 
-<p>
-  <strong>Body:</strong>
-  <%= @question.body %>
-<p/>
+    <p>
+      <strong>Body:</strong>
+      <%= @question.body %>
+    <p/>
 
-<h2>Answers for this question:</h2>
+    <h2>Answers for this question:</h2>
 
-<p>
-  <%= link_to 'New answer for this question', new_admin_question_answer_path(@question) %>
-</p>
+    <p>
+      <%= link_to 'New answer for this question', new_admin_question_answer_path(@question) %>
+    </p>
 
-<table>
-  <tr>
-    <th>Id</th>
-    <th>Body</th>
-    <th colspan="3"></th>
-  </tr>
+    <table class="table table-auto">
+      <tr>
+        <th>Id</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+      </tr>
 
 
-  <% @question.answers.each do | answer | %>
-    <tr>
-      <td><%= answer.id %></td>
-      <td><%= answer.body %></td>
-      <td><%= link_to 'Show', admin_answer_path %></td>
-      <td><%= link_to 'Edit', edit_admin_answer_path(answer) %></td>
-      <td><%= link_to 'Destroy', admin_answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
+      <% @question.answers.each do | answer | %>
+        <tr>
+          <td><%= answer.id %></td>
+          <td><%= answer.body %></td>
+          <td><%= link_to 'Show', admin_answer_path %></td>
+          <td><%= link_to 'Edit', edit_admin_answer_path(answer) %></td>
+          <td><%= link_to 'Destroy', admin_answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
 
-</table>
+    </table>
 
-<%= link_to 'Edit', edit_admin_question_path(@question) %>
-<%= link_to 'Back', admin_test_path(@question.test)%>
+    <%= link_to 'Edit', edit_admin_question_path(@question) %>
+    <%= link_to 'Back', admin_test_path(@question.test)%>
+  </div>
+</div>      
