--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,32 +1,36 @@
-<h1><%= t('.test') %> <%= params[:id] %> </h1>
+<div class="row justify-content-center mt-3">    
+  <div class="col col-md-4">     
+    <h1><%= t('.test') %> <%= params[:id] %> </h1>
 
-<p>
-  <strong><%= t('.title') %></strong>
-  <%= @test.title %>
-<p/>
+    <p>
+      <strong><%= t('.title') %></strong>
+      <%= @test.title %>
+    <p/>
 
-<p>
-  <strong><%= t('.level') %></strong>
-  <%= @test.level %>
-<p/>
+    <p>
+      <strong><%= t('.level') %></strong>
+      <%= @test.level %>
+    <p/>
 
-<h2><%= t('.test_questions') %></h2>
+    <h2><%= t('.test_questions') %></h2>
 
-<p>
-  <%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
-</p>
+    <p>
+      <%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
+    </p>
 
-<table>
-  <tr>
-    <th><%= t('.id') %></th>
-    <th><%= t('.body') %></th>
-    <th colspan="3"><%= t('.actions') %></th>
-  </tr>
+    <table class="table table-auto">
+      <tr>
+        <th><%= t('.id') %></th>
+        <th><%= t('.body') %></th>
+        <th colspan="3"><%= t('.actions') %></th>
+      </tr>
 
-  <% @test.questions.each do |question| %>
-    <%= render partial: 'admin/shared/actions', locals: {question: question, test: @test} %>
-  <% end %>
-</table><br>
+      <% @test.questions.each do |question| %>
+        <%= render partial: 'admin/shared/actions', locals: {question: question, test: @test} %>
+      <% end %>
+    </table><br>
 
-<%= link_to t('form.edit'), edit_admin_test_path(@test) %> | 
-<%= link_to t('form.back'), admin_tests_path %>
+    <%= link_to t('form.edit'), edit_admin_test_path(@test) %> | 
+    <%= link_to t('form.back'), admin_tests_path %>
+  </div>
+</div>    
