Flash message placement on the right

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <h6><%= render 'shared/flash' %></h6>
+    <h6  class="text-end"><%= render 'shared/flash' %></h6>
 
     <%= render 'shared/nav' %>
 
