--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -2,8 +2,11 @@
 
 <b>
   <p><%= t('.number', number: current_number, count: questions_count) %></p>
-  <p><%= @test_passage.current_question.body %></p>
 </b>
+
+<p>
+  <%= @test_passage.current_question.body %>
+</p>
 
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
   <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body,include_hidden: false do |b| %>
@@ -13,6 +16,7 @@
     </p>
   <% end %>
 
+  <p><%= link_to 'Gist Question', gist_test_passage_path(@test_passage), method: :post %></p>
   <p><%= form.submit t('form.next') %></p>
 <% end %>
 
