--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,6 +1,6 @@
 <% flash.each do |key, message| %>
   <div class="alert alert-<%= key_to_bootstrap_class(key) %> alert-dismissible fade show" role="alert">
-    <%= message %>
+    <%= message.html_safe %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
