--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -6,9 +6,9 @@
 
     <%= link_to t('form.login'), new_user_session_path %><br>
 
-    <p>
-      <%= link_to t('.new_test'), new_admin_test_path %>
-    </p>
+    <%= link_to t('.new_test'), new_admin_test_path %><br>
+
+    <%= link_to t('.gists'), admin_gists_path, method: :get %>
 
     <table class="table table-auto">
       <tr>
