--- a/app/views/admin/gists/index.html.erb
+++ b/app/views/admin/gists/index.html.erb
@@ -1,14 +1,17 @@
-<div class="row justify-content-center mt-3">      
-  <h1><%= t('admin.gists.header') %></h1>
+<div class="row justify-content-center mt-3">
+  <%= link_to t('form.test_list'), tests_path %>
+  <div class="col col-md-4">
+    <h1><%= t('admin.gists.header') %></h1>
 
-  <table class="table table-auto">
-    <tr>
-      <th><%= t('admin.gists.question') %></th>
-      <th><%= t('admin.gists.user') %></th>
-      <th><%= t('admin.gists.url') %></th>
-      <th colspan="2"><%= t('admin.gists.actions') %></th>
-    </tr>
+    <table class="table table-auto">
+      <tr>
+        <th><%= t('admin.gists.question') %></th>
+        <th><%= t('admin.gists.user') %></th>
+        <th><%= t('admin.gists.url') %></th>
+        <th><%= t('admin.gists.actions') %></th>
+      </tr>
 
-    <%= render @gists %>
-  </table>
+      <%= render @gists %>
+    </table>
+  </div>
 </div>
