--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -2,6 +2,8 @@
   <div class="col col-md-4">  
     <h1><%= t('.header') %></h1>
 
+    <%= link_to t('form.test_list'), tests_path %><br>
+
     <%= link_to t('form.new'), new_user_registration_path %><br>
 
     <%= link_to t('form.login'), new_user_session_path %><br>
