--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
+
+@import "nav";
+@import "flash";
+@import "test_passages";
+@import "typography/icons";
+@import "global";
