--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,10 +1,13 @@
 <tr>
-  <td><%= test.title %></td>
-  <td><%= test.level %></td>
-  <td><%= test.questions.count %></td>
-  <td><%= link_to t('form.show'), admin_test_path(test)%></td>
-  <td><%= link_to t('form.edit'), edit_admin_test_path(test)  %></td>
-  <td>
+  <td class="align-middle">
+    <%= test.title %>
+    <%= render 'form_inline', test: test == @test ? @test : test %>
+  </td>
+  <td class="align-middle"><%= test.level %></td>
+  <td class="align-middle"><%= test.questions.count %></td>
+  <td class="align-middle"><%= link_to t('form.show'), admin_test_path(test)%></td>
+  <td class="align-middle"><%= link_to t('form.edit'), edit_admin_test_path(test)  %></td>
+  <td class="align-middle">
     <%= link_to t('form.destroy'), admin_test_path(test), method: :delete, data: { confirm: t('form.you_sure') } %>
   </td>
 </tr>
