--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -12,6 +12,8 @@
 
     <%= link_to t('.gists'), admin_gists_path, method: :get %>
 
+    <%= render 'shared/errors', resource: @test %>
+
     <table class="table table-auto">
       <tr>
         <th class="sort-by-title pointer">
