--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,13 +1,19 @@
 <tr>
   <td class="align-middle">
-    <%= test.title %>
+    <%= content_tag :span, test.title, class: 'test-title', data: {test_id: test.id } %>
     <%= render 'form_inline', test: test == @test ? @test : test %>
   </td>
-  <td class="align-middle"><%= test.level %></td>
-  <td class="align-middle"><%= test.questions.count %></td>
-  <td class="align-middle"><%= link_to t('form.show'), admin_test_path(test)%></td>
-  <td class="align-middle"><%= link_to t('form.edit'), edit_admin_test_path(test)  %></td>
-  <td class="align-middle">
+
+  <td class="align-middle text-center"><%= test.level %></td>
+  <td class="align-middle text-center"><%= test.questions.count %></td>
+  <td class="align-middle text-center"><%= link_to t('form.show'), admin_test_path(test)%></td>
+  <td class="align-middle text-center">
+    <%= link_to t('form.edit'),
+                edit_admin_test_path(test),
+                data: { test_id: test.id },
+                class: 'form-inline-link' %>
+  </td>
+  <td class="align-middle text-center">
     <%= link_to t('form.destroy'), admin_test_path(test), method: :delete, data: { confirm: t('form.you_sure') } %>
   </td>
 </tr>
