--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row justify-content-center mt-3">    
-  <div class="col col-md-4">  
+  <div>  
     <h1><%= t('.header') %></h1>
 
     <%= link_to t('form.test_list'), tests_path %><br>
@@ -16,14 +16,14 @@
 
     <table class="table table-auto">
       <tr>
-        <th class="sort-by-title pointer">
+        <th class="sort-by-title pointer text-center">
           <%= t('.title') %>
           <%= octicon 'arrow-up', class: 'text-success hide' %>
           <%= octicon 'arrow-down', class: 'text-success hide' %>
         </th>
-        <th><%= t('.level') %></th>
-        <th><%= t('.question') %></th>
-        <th colspan="3"><%= t('.actions') %></th>
+        <th class="text-center"><%= t('.level') %></th>
+        <th class="text-center"><%= t('.question') %></th>
+        <th colspan="3", class="text-center"><%= t('.actions') %></th>
       </tr>
 
       <%= render @tests %>
