--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -4,6 +4,15 @@
   <p><%= t('.number', number: current_number, count: questions_count) %></p>
 </b>
 
+<div class="progress mb-3">
+  <div class="progress-bar" role="progressbar" style="width: <%= (current_number.to_f / questions_count * 100).round(2) %>%;" 
+       aria-valuenow="<%= (current_number.to_f / questions_count * 100).round(2) %>" 
+       aria-valuemin="0" 
+       aria-valuemax="100">
+    <%= (current_number.to_f / questions_count * 100).round(2) %>%
+  </div>
+</div>
+
 <p>
   <%= @test_passage.current_question.body %>
 </p>
