--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -5,11 +5,14 @@
 </b>
 
 <div class="progress mb-3">
-  <div class="progress-bar" role="progressbar" style="width: <%= (current_number.to_f / questions_count * 100).round(2) %>%;" 
+  <div class="progress-bar" 
+       role="progressbar" 
+       style="width: <%= (current_number.to_f / questions_count * 100).round(2) %>%;" 
        aria-valuenow="<%= (current_number.to_f / questions_count * 100).round(2) %>" 
        aria-valuemin="0" 
-       aria-valuemax="100">
-    <%= (current_number.to_f / questions_count * 100).round(2) %>%
+       aria-valuemax="100"
+       data-progress="<%= (current_number.to_f / questions_count * 100).round(2) %>">
+    <span class="progress-text"><%= (current_number.to_f / questions_count * 100).round(2) %>%</span>
   </div>
 </div>
 
