--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
-@import "nav";
+// @import "nav";
 @import "flash";
 @import "test_passages";
 @import "typography/icons";
