--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // @import "nav";
-@import "flash";
-@import "test_passages";
-@import "typography/icons";
-@import "global";
+// @import "flash";
+// @import "test_passages";
+// @import "typography/icons";
+// @import "global";
